# bsky_scraper

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
lib/: arguments.py  skyscraper.py  types.py  utils.py
scripts/: scraper.py
